kubernetes/apps/selfhosted/paperless/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  annotations:
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    hajimari.io/enable: "true"
    hajimari.io/appName: "paperless"
    hajimari.io/group: "home"
    hajimari.io/icon: "file-multiple"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-cloudflare-secure-noauth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "dms.${SECRET_DOMAIN}"
      secretName: "dms.${SECRET_DOMAIN//./-}-prod-tls"
  rules:
    - host: dms.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  number: 8000
